--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ site.lang | default: "en-US" }}">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>{{ page.title | default: site.title }}</title>
@@ -22,7 +22,7 @@
             </nav>
         </div>
     </header>
-    <main class="content">
+    <main class="content container">
         {{ content }}
     </main>
     <footer class="footer">
